--- a/WebApp.Shop/app/public/css/styles.css
+++ b/WebApp.Shop/app/public/css/styles.css
@@ -9,7 +9,12 @@
   --color_008: rgb(73 186 73);
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
   margin: 0px;
   font-family: Samim;
   padding: 0px;
@@ -135,12 +140,12 @@ footer {
   color: var(--color_003) !important
 }
 
-.right-item {
+/* .right-item {
   width: 76%;
   margin-left: 12%;
   font-weight: 600;
   font-size: 17px;
-}
+} */
 
 @media screen and (max-width: 1100px) {
   .card-section {
