--- a/WebApp.Shop/app/src/root/web_modal/Web_Modal.css
+++ b/WebApp.Shop/app/src/root/web_modal/Web_Modal.css
@@ -1,45 +1,103 @@
-.web-modal {
-    /* display: none; */
-    position: fixed;
+.web-modal,
+.web-modal-context {
+    position: absolute;
     z-index: 1;
-    padding-top: 100px;
+    /* padding-top: 100px; */
     left: 0;
     top: 0;
+    overflow: auto;
+}
+
+.web-modal {
     width: 100%;
     height: 100%;
-    overflow: auto;
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
 }
 
+.web-modal-context {
+    width: 300px;
+    /* box-shadow: 1px 0px 2px 0px; */
+    background-color: white;
+    border-radius: 6px;
+    border: 1px solid var(--color_005);
+    left: -100%;
+    top: -100%;
+}
+.web-modal-body{
+    padding: 10px 10px;
+    overflow: hidden;
+}
 .web-modal-content {
     background-color: #fefefe;
     margin: auto;
-    padding: 20px;
+    /* padding: 20px; */
     border: 1px solid #888;
-    width: 80%;
 }
 
-.web-modal-head {
-    
-width: 100%;
-    
-height: 40px;
-    
-background-color: antiquewhite;
+.web-modal .web-modal-content {
+    width: 50%;
+    margin-top: 90px; 
 }
+
+.web-modal-content {
+    width: 100%;
+    border: none;
+}
+
+.web-modal-head {width: 100%;height: 40px;padding-left: 10px;padding-bottom: 41px;border-bottom: 1px solid var(--color_004);}
 
 .web-modal-close {
-    color: #aaaaaa;
+    color: black;
     float: left;
     font-size: 28px;
     font-weight: bold;
     left: 0;
+    font-size: 20px;
+    line-height: 2;
 }
-
+ 
 .web-modal-close:hover,
 .web-modal-close:focus {
-    color: #000;
     text-decoration: none;
+    opacity: 0.6;
     cursor: pointer;
+}
+
+
+.contextlist-item-icon {
+    /* display: inline-block; */
+    position: absolute;
+    display: none;
+}
+
+.command-line {
+    float: left;
+}
+
+.contextlist-hold {
+    float: right;
+    position: relative;
+    width: 192px;
+}
+
+.contextlist-each {
+    cursor: pointer;
+    margin-top: 2px;
+    position: relative;
+}
+
+.contextlist-each:hover.contextlist-each::after {
+    display: block;
+}
+
+.contextlist-each::after {
+    content: '';
+    display: none;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color_001);
+    opacity: 0.1;
 }
