--- a/WebApp.Shop/app/src/root/file_manager/file-manager.css
+++ b/WebApp.Shop/app/src/root/file_manager/file-manager.css
@@ -34,6 +34,7 @@
 .f-hold {
     position: relative;
     padding: 20px 10px 20px 10px;
+    height: fit-content;
 }
 
     .f-hold:hover > .select-bar ,
