--- a/WebApp.Shop/app/src/root/web_modal/Web_Modal.css
+++ b/WebApp.Shop/app/src/root/web_modal/Web_Modal.css
@@ -24,10 +24,12 @@
     left: -100%;
     top: -100%;
 }
-.web-modal-body{
+
+.web-modal-body {
     padding: 10px 10px;
     overflow: hidden;
 }
+
 .web-modal-content {
     background-color: #fefefe;
     margin: auto;
@@ -37,7 +39,7 @@
 
 .web-modal .web-modal-content {
     width: 50%;
-    margin-top: 90px; 
+    margin-top: 90px;
 }
 
 .web-modal-content {
@@ -45,7 +47,13 @@
     border: none;
 }
 
-.web-modal-head {width: 100%;height: 40px;padding-left: 10px;padding-bottom: 41px;border-bottom: 1px solid var(--color_004);}
+.web-modal-head {
+    width: 100%;
+    height: 40px;
+    padding-left: 10px;
+    padding-bottom: 41px;
+    border-bottom: 1px solid var(--color_004);
+}
 
 .web-modal-close {
     color: black;
@@ -56,7 +64,7 @@
     font-size: 20px;
     line-height: 2;
 }
- 
+
 .web-modal-close:hover,
 .web-modal-close:focus {
     text-decoration: none;
@@ -64,11 +72,14 @@
     cursor: pointer;
 }
 
+.contextlist-item-text {
+    padding-right: 22px;
+}
 
 .contextlist-item-icon {
-    /* display: inline-block; */
     position: absolute;
-    display: none;
+    top: 0;
+    right: 0;
 }
 
 .command-line {
