--- a/WebApp.Shop/app/src/root/file_manager/file-manager.css
+++ b/WebApp.Shop/app/src/root/file_manager/file-manager.css
@@ -1,5 +1,4 @@
-﻿
-.folder {
+﻿.folder {
     stroke: var(--color_005);
     fill: var(--color_001);
     stroke-width: 4;
@@ -13,42 +12,86 @@
     border-radius: 50px;
     position: absolute;
     top: 15px;
-    right: 15px;
+    left: 15px;
     height: 20px;
     width: 20px;
     display: none;
 }
 
 .hover-bar {
-    height: 100%;
+    height: 98%;
     position: absolute;
-    width: 100%;
+    width: 98%;
     background-color: var(--color_005);
-    top: 0;
-    left: 0;
+    top: 1%;
+    left: 1%;
     opacity: 0.4;
     border-radius: 20px;
     display: none;
 }
 
+
+
 .f-hold {
     position: relative;
     padding: 20px 10px 20px 10px;
     height: fit-content;
+    direction: rtl;
 }
 
-    .f-hold:hover > .select-bar ,
-        .f-hold:hover > .hover-bar {
-        display: block;
-    }
+.f-hold:hover>.select-bar,
+.f-hold:hover>.hover-bar,
+.f-hold.selected-object-kind>.select-bar,
+.f-hold.selected-object-kind>.hover-bar {
+    display: block;
+}
 
-    .f-hold svg {
-        width: 80%;
-        margin-left: 10%;
-    }
+.f-hold.selected-object-kind>.select-bar {
+    background-color: var(--color_002);
+}
+
+.f-hold svg {
+    width: 80%;
+    margin-right: 9%;
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+}
 
 .drive-bar {
     margin-left: 15px;
     margin-right: 15px;
-    height:100%;
+    height: 100%;
+    position: relative;
+}
+
+.f-hold-title {
+    width: 80%;
+    margin-right: 24px;
+}
+
+.drive-bar.dragenter::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color_001);
+    border: 7px dotted;
+    border-color: var(--color_007);
+    opacity: 0.1;
+    border-radius: 12px;
+
+}
+
+.drive-bar.dragenter::before {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    content: 'فایل خودرا اینجارها کنید';
+    color: var(--color_002);
+    font-size: 45px;
+    font-weight: 800;
+    line-height: 90vh;
+    text-align: center;
+    z-index: 4;
+    opacity: 1;
 }
