--- a/WebApp.Shop/app/src/root/file_manager/file-manager.css
+++ b/WebApp.Shop/app/src/root/file_manager/file-manager.css
@@ -51,22 +51,30 @@
 }
 
 .f-hold svg {
-    width: 80%;
-    margin-right: 9%;
+
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
+}
+
+.f-hold svg,
+.f-hold img {
+    width: 80%;
+    margin-right: 9%;
+    height: 180px;
 }
 
 .drive-bar {
     margin-left: 15px;
     margin-right: 15px;
-    height: 100%;
+    min-height: 70vh;
     position: relative;
 }
 
 .f-hold-title {
     width: 80%;
     margin-right: 24px;
+    height: 24px;
+    overflow: hidden;
 }
 
 .drive-bar.dragenter::after {
