--- a/WebApp.Shop/app/src/root/web_modal/Web_Modal.css
+++ b/WebApp.Shop/app/src/root/web_modal/Web_Modal.css
@@ -65,12 +65,12 @@
     line-height: 2;
 }
 
-.web-modal-close:hover,
-.web-modal-close:focus {
-    text-decoration: none;
-    opacity: 0.6;
-    cursor: pointer;
-}
+    .web-modal-close:hover,
+    .web-modal-close:focus {
+        text-decoration: none;
+        opacity: 0.6;
+        cursor: pointer;
+    }
 
 .contextlist-item-text {
     padding-right: 22px;
@@ -83,7 +83,8 @@
 }
 
 .command-line {
-    float: left;
+    position: absolute;
+    left: 10px;
 }
 
 .contextlist-hold {
@@ -98,17 +99,17 @@
     position: relative;
 }
 
-.contextlist-each:hover.contextlist-each::after {
-    display: block;
-}
+    .contextlist-each:hover.contextlist-each::after {
+        display: block;
+    }
 
-.contextlist-each::after {
-    content: '';
-    display: none;
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: var(--color_001);
-    opacity: 0.1;
-}
+    .contextlist-each::after {
+        content: '';
+        display: none;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: var(--color_001);
+        opacity: 0.1;
+    }
