--- a/WebApp.Shop/app/src/layout.css
+++ b/WebApp.Shop/app/src/layout.css
@@ -1,6 +1,6 @@
 .shutter-view {
     display: flex;
-    height: 100%;
+    /* height: 100%; */
     position: relative;
 }
   
@@ -13,9 +13,10 @@
     grid-template-areas:
         'link_list'
         'drive_info';
-    height: 100%;
+    /* height: 100%; */
     position: relative;
     overflow: hidden;
+    height: 100%;
 }
 
 .link-list-item {
