--- a/WebApp.Shop/app/public/css/styles.css
+++ b/WebApp.Shop/app/public/css/styles.css
@@ -1,12 +1,12 @@
 :root {
-    --color_001: #242582;
-    --color_002: #553D67;
+    --color_001: #f1f3f4;
+    --color_002: #5F6368;
     --color_003: #F64C72;
     --color_004: #99738E;
-    --color_005: #2F2FA2;
+    --color_005: #185abc;
     --color_006: #FFFFFF;
     --color_007: #F3F3F3;
-    --color_008: rgb(73 186 73);
+    --color_008: #dadce0;
 }
 
 
