--- a/WebApp.Shop/app/public/css/area/file_manager/layout.css
+++ b/WebApp.Shop/app/public/css/area/file_manager/layout.css
@@ -165,6 +165,28 @@
     height: 42px;
     border-radius: 10px;
     overflow: hidden;
+    display: flex;
+    order: 2;
+}
+
+.user-settings {
+    position: relative;
+    margin: 7px 19px 0px 0px;
+}
+
+.user-icon {
+    border-radius: 100px;
+    width: 34px;
+    height: 34px;
+    position: relative;
+}
+
+.adjustment-toolbar {
+    display: block;
+    width: 30%;
+    direction: rtl;
+    display: flex;
+    order: 3;
 }
 
 .logo-box {
@@ -172,6 +194,8 @@
     overflow: hidden;
     position: relative;
     top: 9px;
+    display: flex;
+    order: 1;
 }
 
 .logo-box img {
@@ -186,6 +210,7 @@
     display: inline-block;
     width: 82%;
     margin-left: 2%;
+    position: relative;
 }
 
 .border-hide-bottom {
@@ -195,7 +220,6 @@
 
 .search-drive {
     background-color: transparent;
-    /* background-color: white; */
     height: 100%;
     width: 92%;
     left: 0px;
@@ -205,6 +229,12 @@
     padding: 0;
     border: none;
     opacity: 0.7;
+}
+
+.search-box .s-place-holder {
+    position: absolute;
+    left: 54px;
+    top: 10px;
 }
 
 
@@ -224,8 +254,8 @@
 .search-box button i {
     font-size: 23px;
     position: absolute;
-    top: 11px;
-    left: 27px;
+    top: 10px;
+    left: 9px;
 }
 
 .top-divider {
@@ -238,4 +268,51 @@
     position: relative;
     width: 102%;
     left: -1%;
+}
+
+@media screen and (max-width: 992px) {
+    .view-side-center {
+        position: fixed;
+        background-color: var(--color_006);
+        z-index: 1;
+        width: 100%;
+        top: 0;
+        left: 0;
+        height: 100%;
+        display: none;
+    }
+
+    .view-main-center {
+        box-shadow: none;
+        border-left: none;
+    }
+
+    .adjustment-toolbar {
+        order: 2;
+        width: 50%;
+    }
+
+    .search-box {
+        order: 3;
+        display: none;
+    }
+
+    .logo-box {
+        order: 1;
+        width: 50%;
+    }
+
+    .content-title {
+        font-size: 20px;
+        top: 8px;
+        position: relative;
+    }
+
+    .logo-box img {
+        top: -3px;
+    }
+
+    .user-icon {
+        top: 4px;
+    }
 }
