--- a/WebApp.Shop/app/public/css/styles.css
+++ b/WebApp.Shop/app/public/css/styles.css
@@ -1,7 +1,7 @@
 :root {
     --color_001: #f1f3f4;
     --color_002: #5F6368;
-    --color_003: #F64C72;
+    --color_003: #59cbff;
     --color_004: #99738E;
     --color_005: #d3d3d3;
     --color_006: #FFFFFF;
