--- a/WebApp.Shop/app/public/css/input-pack.css
+++ b/WebApp.Shop/app/public/css/input-pack.css
@@ -18,6 +18,7 @@
   0% {
     top: 0px;
   }
+
   100% {
     top: -20px;
   }
@@ -39,7 +40,7 @@ label.epo-right {
 }
 
 label.epo-right {
-  right: 0;
+  left: 0;
 }
 
 /*============select============*/
@@ -187,4 +188,12 @@ input.epo:focus {
   color: white;
   background-color: var(--color_001);
   border-color: var(--color_001);
+}
+
+.epo-en-right {
+  direction: rtl;
+}
+
+.btn p {
+  margin: 0;
 }
