--- a/WebApp.Shop/app/public/css/area/file_manager/layout.css
+++ b/WebApp.Shop/app/public/css/area/file_manager/layout.css
@@ -311,27 +311,27 @@
     cursor: pointer;
     color: var(--color_002);
 }
-
+/* 
 .user-info-header {
     display: flex;
     padding: 12px;
     margin: 6px 6px 8px 4px;
     position: relative;
-}
+} */
 
-.user-info-profile {
+/* .user-info-profile {
     padding: 12px 15px 11px 13px;
     color: var(--color_002);
-}
+} */
 
-.user-info-img {
+/* .user-info-img {
     border-radius: 100px;
     width: 50px;
     height: 50px;
     top: 1px;
     right: 12px;
     border-radius: 100%;
-}
+} */
 
 .user-info-frame {
     position: absolute;
